<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_portfolio">

    <fragment
        android:id="@+id/navigation_portfolio"
        android:name="com.paysafe.hackathon.thesesame.ui.fragments.portfolio.PortfolioFragment"
        android:label="@string/title_portfolio"
        tools:layout="@layout/fragment_portfolio" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.paysafe.hackathon.thesesame.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.paysafe.hackathon.thesesame.ui.fragments.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_my_arts"
        android:name="com.paysafe.hackathon.thesesame.ui.fragments.myArtItems.MyArtItemsFragment"
        android:label="@string/title_myArts"
        tools:layout="@layout/fragment_art_list_my" />
</navigation>