<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/MaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="19dp"
        android:background="#9F9F9F"
        android:padding="2dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:checkedIcon="@drawable/check"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/itemPortfolioImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/content_description_media_art"
                android:scaleType="centerCrop"
                android:scrollbarSize="@android:dimen/app_icon_size"
                app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media"
                app:srcCompat="@drawable/row_art_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="19dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/itemPortfolioTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tools_art_title"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/allOffersListPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold|italic"
                    android:text="@string/tools_art_secondary_text"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/active_icon_color" />

                <TextView
                    android:id="@+id/allOffersListDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/tools_art_supporting_text"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <!-- Buttons -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/action_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/action_2"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/materialButton2"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialShareButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/action_3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>