<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/MaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="19dp"
        android:background="#EFECEC"
        android:padding="2dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:checkedIcon="@drawable/check"
        app:contentPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemPortfolioMainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <!-- Media -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/itemPortfolioImage"
                android:layout_width="125dp"
                android:layout_height="150dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/content_description_media_art"
                android:scaleType="centerCrop"
                android:scrollbarSize="@android:dimen/app_icon_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media"
                app:srcCompat="@drawable/row_art_img" />

            <TextView
                android:id="@+id/itemPortfolioTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:autoSizeTextType="uniform"
                android:text="@string/tools_art_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/itemPortfolioImage"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:minWidth="125dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toEndOf="@+id/itemPortfolioImage"
                app:layout_constraintTop_toBottomOf="@+id/itemPortfolioTitle">

                <!-- Title, secondary and supporting text -->


                <TextView
                    android:id="@+id/itemPortfolio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tools_art_secondary_text"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/active_icon_color"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/itemPortfolioPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    android:text="@string/portfolioPrice"
                    android:textColor="@color/green_profit" />
                <TextView
                    android:id="@+id/itemPortfolioPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    android:text="@string/profit"
                    android:textColor="@color/green_profit" />

            </LinearLayout>

            <com.anychart.AnyChartView
                android:id="@+id/itemPortfolioChart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/itemPortfolioTitle" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />


            <!-- Buttons -->
            <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_margin="8dp"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintStart_toEndOf="@+id/allOffersListIcon">-->

            <!--                <com.google.android.material.button.MaterialButton-->
            <!--                    android:id="@+id/materialButton2"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_margin="2dp"-->
            <!--                    android:text="@string/action_1"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                    app:layout_constraintStart_toStartOf="parent"-->
            <!--                    app:layout_constraintTop_toTopOf="parent" />-->

            <!--                <com.google.android.material.button.MaterialButton-->
            <!--                    android:id="@+id/materialButton"-->
            <!--                    style="?attr/materialButtonOutlinedStyle"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_margin="2dp"-->
            <!--                    android:text="@string/action_2"-->
            <!--                    android:visibility="gone"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                    app:layout_constraintStart_toEndOf="@+id/materialButton2"-->
            <!--                    app:layout_constraintTop_toTopOf="parent" />-->

            <!--                <com.google.android.material.button.MaterialButton-->
            <!--                    android:id="@+id/materialShareButton"-->
            <!--                    style="?attr/materialButtonOutlinedStyle"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_margin="2dp"-->
            <!--                    android:text="@string/action_3"-->
            <!--                    android:textAlignment="center"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                    app:layout_constraintEnd_toEndOf="parent"-->
            <!--                    app:layout_constraintTop_toTopOf="parent" />-->
            <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemPortfolioAddNewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/itemPortfolioAddNewButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/add_new_plus"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>